// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllStyleVariants 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-labelledby="react-aria-:ri: react-aria-:rj:"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:ri:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-:rj:"
          >
            danger
          </span>
          <span
            class="text-medium"
          >
            42%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-danger"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-labelledby="react-aria-:rl: react-aria-:rm:"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:rl:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-:rm:"
          >
            default
          </span>
          <span
            class="text-medium"
          >
            42%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-default-400"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-labelledby="react-aria-:ro: react-aria-:rp:"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:ro:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-:rp:"
          >
            info
          </span>
          <span
            class="text-medium"
          >
            42%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-info"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-labelledby="react-aria-:rr: react-aria-:rs:"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:rr:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-:rs:"
          >
            primary
          </span>
          <span
            class="text-medium"
          >
            42%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-labelledby="react-aria-:ru: react-aria-:rv:"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:ru:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-:rv:"
          >
            secondary
          </span>
          <span
            class="text-medium"
          >
            42%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-secondary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-labelledby="react-aria-:r11: react-aria-:r12:"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r11:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-:r12:"
          >
            success
          </span>
          <span
            class="text-medium"
          >
            42%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-success"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-labelledby="react-aria-:r14: react-aria-:r15:"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42"
        aria-valuetext="42%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r14:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
            id="react-aria-:r15:"
          >
            warning
          </span>
          <span
            class="text-medium"
          >
            42%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-warning"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > CompletedSuccess 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="Loading..."
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      aria-valuetext="42%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-:r9:"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
        >
          42%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-primary"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
    <div
      aria-label="Loading..."
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="100%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-:rc:"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
        >
          100%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-success"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
    <div
      aria-label="Loading..."
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="150%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-:rf:"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
        >
          150%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-success"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="Loading..."
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-:r0:"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
        >
          0%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-primary"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > NoValueLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="Loading..."
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-:r6:"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-primary"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > SomePercentages 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r17:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            0%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        aria-valuetext="10%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1a:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            10%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1d:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            20%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        aria-valuetext="30%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1g:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            30%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        aria-valuetext="40%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1j:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            40%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        aria-valuetext="50%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1m:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            50%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="60"
        aria-valuetext="60%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1p:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            60%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        aria-valuetext="70%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1s:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            70%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="80"
        aria-valuetext="80%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r1v:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            80%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="90"
        aria-valuetext="90%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r22:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            90%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="100%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r25:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            100%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 10px;"
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="150%"
        class="flex flex-col gap-2 w-full"
        id="react-aria-:r28:"
        role="progressbar"
      >
        <div
          class="flex justify-between"
        >
          <span
            class="text-medium"
          >
            150%
          </span>
        </div>
        <div
          class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
        >
          <div
            class="h-full rounded-full transition-transform !duration-500 bg-primary"
            style="transform: translateX(-100%);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithLabel 1`] = `
<div>
  <div
    style="width: 300px;"
  >
    <div
      aria-label="Loading..."
      aria-labelledby="react-aria-:r3: react-aria-:r4:"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-:r3:"
      role="progressbar"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-medium"
          id="react-aria-:r4:"
        >
          label
        </span>
        <span
          class="text-medium"
        >
          0%
        </span>
      </div>
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden h-3 rounded-full"
      >
        <div
          class="h-full rounded-full transition-transform !duration-500 bg-primary"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;
